# rhist

./: README.md  pyproject.toml
src/rhist/: rhist.py
